Initial commit and add Header component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,13 +3,17 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-sf-display: --apple-system, BlinkMacSystemFont, "SF Pro Display", ,
+    Helvetica, "Helvetica Neue", Arial, sans-serif;
+  --font-sf-text: --apple-system, BlinkMacSystemFont, "SF Pro Text", Helvetica,
+    "Helvetica Neue", Arial, sans-serif;
+  --font-helvetica: Helvetica, "Helvetica Neue", Arial, sans-serif;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-family: var(--font-sf-text);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +27,14 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.font-sf-display {
+  font-family: var(--font-sf-display);
+}
+.font-sf-text {
+  font-family: var(--font-sf-text);
+}
+.font-helvetica {
+  font-family: var(--font-helvetica);
 }
